Build, run and stop workspace container when needed

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.11
 RUN apt-get update && apt-get upgrade -y
+RUN apt-get install -y tini
 WORKDIR /root/workspace
-# Keep the container running
-CMD ["tail", "-f", "/dev/null"]
+
+# Use tini as the entrypoint and keep the container running
+# tini forwards exit signals to sleep, thus fixing "docker stop" taking 10 seconds
+ENTRYPOINT ["/usr/bin/tini", "--", "sleep", "infinity"]
