Remove tini from Dockerfile

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11
 RUN apt-get update && apt-get upgrade -y
-RUN apt-get install -y tini openssh-server
+RUN apt-get install -y openssh-server
 
 # SSH config
 RUN mkdir /var/run/sshd
@@ -11,7 +11,4 @@ RUN sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/' /etc/ssh/sshd
 
 WORKDIR /root/workspace
 
-# Use tini as the entrypoint and keep the container running
-# tini forwards exit signals, thus fixing "docker stop" taking 10 seconds
 ENTRYPOINT ["/usr/sbin/sshd", "-D"]
-# ENTRYPOINT ["/usr/bin/tini", "--", "/usr/sbin/sshd", "-D"]
